--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Sendgrid",
+            "name": "Launch Main",
             "type": "node",
             "request": "launch",
             "cwd": "${workspaceFolder}",
@@ -11,7 +11,7 @@
                 "run"
                 "--inspect",
                 "--allow-net",
-                "sendgrid.ts"
+                "main.ts"
             ],
             "port": 9229
         },
